--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,4 @@
-aiohappyeyeballs==2.6.1
 aiohttp==3.12.15
-aiosignal==1.4.0
-annotated-types==0.7.0
-anyio==4.9.0
-attrs==25.3.0
-av==15.0.0
-certifi==2025.7.14
-charset-normalizer==3.4.2
-click==8.2.1
-colorama==0.4.6
-coloredlogs==15.0.1
-ctranslate2==4.6.0
-fastapi==0.116.1
+beam-client==0.2.174
 faster-whisper==1.1.1
-filelock==3.18.0
-flatbuffers==25.2.10
-frozenlist==1.7.0
-fsspec==2025.7.0
-h11==0.16.0
-huggingface-hub==0.34.3
-humanfriendly==10.0
-idna==3.10
-mpmath==1.3.0
-multidict==6.6.3
-numpy==2.3.2
-onnxruntime==1.22.1
-packaging==25.0
-propcache==0.3.2
-protobuf==6.31.1
-pydantic==2.11.7
-pydantic_core==2.33.2
-pyreadline3==3.5.4
-PyYAML==6.0.2
-requests==2.32.4
-setuptools==80.9.0
-sniffio==1.3.1
-starlette==0.47.2
-sympy==1.14.0
-tokenizers==0.21.4
-tqdm==4.67.1
-typing-inspection==0.4.1
-typing_extensions==4.14.1
-urllib3==2.5.0
-uvicorn==0.35.0
-yarl==1.20.1
+httpx
